aopen-dep-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: capstone
  name: aopen
  labels:
    app: aopen
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: aopen
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: capstone
  name: aopen
  labels:
    app: aopen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aopen
  template:
    metadata:
      labels:
        app: aopen
    spec:
      containers:
        - name: aopen
          image: zasmin/aopen:cm
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 20
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5
