center-dep-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: capstone
  name: center
  labels:
    app: center
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: center

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: capstone
  name: center
  labels:
    app: center
spec:
  replicas: 1
  selector:
    matchLabels:
      app: center
  template:
    metadata:
      labels:
        app: center
    spec:
      containers:
        - name: center
          image: zasmin/hana-center:1.0
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 20
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5
