check-dep-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: capstone
  name: check
  labels:
    app: check
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: check
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: capstone
  name: check
  labels:
    app: check
spec:
  replicas: 1
  selector:
    matchLabels:
      app: check
  template:
    metadata:
      labels:
        app: check
    spec:
      containers:
        - name: check
          image: zasmin/hana-check:1.0
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 20
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5
