check-server-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: check-server-rule
  namespace: capstone
spec:
  hosts:
  - check-server
  http:
  - route:
    - destination:
        host: check-server
    timeout: 3s
    retries:
      attempts: 5
      perTryTimeout: 2s
      retryOn: 5xx,retriable-4xx,gateway-error,connect-failure,refused-stream
